--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Professor Horner's Bible-Reading System</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="./reading-plan.js"></script>
-  <script src="./script.js"></script>
+  <script src="/reading-plan.js"></script>
+  <script src="/script.js"></script>
 </head>
 <body>
   <div id="daily-readings"></div>
